Fix categories alignment

--- a/app/assets/stylesheets/home/dataset_list.sass
+++ b/app/assets/stylesheets/home/dataset_list.sass
@@ -96,6 +96,7 @@
 
   .categories
     max-width: 22em
+    vertical-align: middle
 
 .dataset-info
   padding: 1.5em 1em
